Fix horizontal scrolling on mobile, and update icon set.

--- a/_themes/cakephp/static/css/default.css
+++ b/_themes/cakephp/static/css/default.css
@@ -27,7 +27,7 @@
 }
 
 .page-container {
-    padding: 80px 0;
+    padding-top: 80px;
 }
 
 /* General button */
